# fastapi-mcp

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: backward-compatibility.md  roadmap.md
example/: main.py  secure_main.py
fastapi_mcp/: __init__.py  executor.py  parser.py  registry.py  router.py  schemas.py  security.py
tests/: test_agent_eval.py  test_parser.py  test_router.py  test_security.py
