[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

# ── Project metadata ──────────────────────────────────────────────────────────

[project]
name            = "fastapi-mcp"
version         = "0.1.0"
description     = "Automatically expose FastAPI endpoints as MCP tools for AI agents"
readme          = "README.md"
license         = { text = "MIT" }
requires-python = ">=3.11"
authors         = [
    { name = "fastapi-mcp contributors" }
]
keywords = [
    "fastapi", "mcp", "model-context-protocol",
    "ai", "llm", "claude", "cursor", "chatgpt", "agents",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
]

dependencies = [
    "fastapi>=0.111.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
]

[project.optional-dependencies]
server = ["uvicorn[standard]>=0.29.0"]
redis  = ["redis>=5.0.0"]
dev    = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",        # TestClient transport
    "respx>=0.21.0",        # mock httpx calls in tests
    "uvicorn[standard]>=0.29.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.urls]
Homepage    = "https://github.com/YOUR_USERNAME/fastapi-mcp"
Repository  = "https://github.com/YOUR_USERNAME/fastapi-mcp"
Issues      = "https://github.com/YOUR_USERNAME/fastapi-mcp/issues"
Changelog   = "https://github.com/YOUR_USERNAME/fastapi-mcp/blob/main/CHANGELOG.md"

# ── Tool configuration ────────────────────────────────────────────────────────

[tool.hatch.build.targets.wheel]
packages = ["fastapi_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths    = ["tests"]

[tool.ruff]
line-length    = 100
target-version = "py311"

[tool.ruff.lint]
select  = ["E", "F", "I", "UP", "B", "SIM"]
ignore  = ["E501"]   # line length handled by formatter

[tool.mypy]
python_version         = "3.11"
strict                 = true
ignore_missing_imports = true
